tests/ui/diagnostic_namespace/do_not_recommend/stacked.current.stderr
error[E0277]: the trait bound `(): Root` is not satisfied
  --> $DIR/stacked.rs:18:18
   |
LL |     needs_root::<()>();
   |                  ^^ the trait `Root` is not implemented for `()`
   |
note: required by a bound in `needs_root`
  --> $DIR/stacked.rs:15:18
   |
LL | fn needs_root<T: Root>() {}
   |                  ^^^^ required by this bound in `needs_root`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
